@@ -1,3 +1,8 @@
+2012-12-03  Borut Razem  <borutr@users.sourceforge.net>
+  * gpasm/lst.c, gpasm/lst.h, gpasm/directive.c:
+    fixed listing of PAGE directive;
+    error, warning, message spacing like in MPASM(X)
+
 2012-12-02  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/list.c: added info about amount of free program memory to the
     listing
